# bbswitchd

./: .gitignore  Makefile  README.md  bbswitch  bbswitchd.spec  meson.build  meson_options.txt
data/: 99-bbswitchd-nvidia-dev.rules  bbswitch-modprobe.conf  bbswitch-nvidia-mutter.rules  bbswitch-sleep.service  bbswitchd-blacklist.conf  bbswitchd.preset  bbswitchd.service.in  bbswitchd.socket  meson.build
debian/: .gitignore  changelog  control  copyright  postinst  postrm  rules  watch
debian/upstream/: metadata
selinux/: bbswitchd.fc  bbswitchd.if  bbswitchd.te  meson.build
src/: Makefile  bbswitch.c  bbswitch.h  logger.c  logger.h  main.c  meson.build  module.c  module.h  pci.c  pci.h  server.c  server.h
